--- a/wp-content/themes/snf/style.css
+++ b/wp-content/themes/snf/style.css
@@ -27,7 +27,9 @@ IX.) News
 /*===================================================
     Bootstrap Import Sass
 ======================================================*/
+
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+
 /*===================================================
     Branding
 ======================================================*/
@@ -58,7 +60,6 @@ IX.) News
 @import "styles/css/cpt/products.css";
 @import "styles/css/cpt/marketing-material.css";
 @import "styles/css/cpt/investors.css";
-@import "styles/css/cpt/timeline.css";
 
 /*===================================================
     Markets
@@ -73,8 +74,9 @@ IX.) News
 @import "styles/css/markets/industrial.css";
 @import "styles/css/markets/textiles.css";
 @import "styles/css/markets/dredging.css";
-
-
+@import "styles/css/markets/construction.css";
+@import "styles/css/markets/equipment.css";
+@import "styles/css/markets/mining.css";
 
 /*===================================================
     TEMPLATES
