--- a/wp-content/themes/snf/styles/css/flexible.css
+++ b/wp-content/themes/snf/styles/css/flexible.css
@@ -356,3 +356,25 @@ IX.) News
     height: 1px;
     background-color: #bbbbbb;
 }
+
+.cta_card_slider{}
+.cta_card_slider .card-body p{
+    text-align:left;
+    font-size:.90rem;
+}
+
+
+.subs-content a[data-toggle="lightbox"] img:hover {
+    background-color:#000;
+
+
+}
+
+.horizontal_card_img{
+    background-position: center;
+    background-size: cover;
+    /* height: 250px; */
+    object-fit: cover;
+    position: relative;
+
+    min-width: 35%;}
