--- a/wp-content/themes/snf/styles/css/header.css
+++ b/wp-content/themes/snf/styles/css/header.css
@@ -15,7 +15,7 @@ VII.) Media Query
 @media(max-width: 768px) {
     .site-header {
         overflow-x:  hidden;
-    }
+        width: 100%;}
 }
 .site-header{
     /* box-shadow:0 4px 10px -10px rgb(0 0 0 / 60%); */
@@ -29,6 +29,13 @@ VII.) Media Query
     position: relative;
     top: 0;
     color: #fff;
+}
+.market_nav_elements ul li a ul.dropdown{
+    display:none;
+}
+.market_nav_elements ul li:hover ul.dropdown{
+    display:block;
+    position:relative;
 }
 .globalTopBar .desktopTopBar .itemsRight ul li {
     display: inline-flex;
@@ -241,7 +248,7 @@ VII.) Media Query
     .countryModalContent .close span {
         font-size: 2rem;
     }
-    .modal-header .close {
+    #locationsModal .modal-header .close {
         position: relative;
         right: 30px;
         top: -20px;
@@ -255,18 +262,18 @@ VII.) Media Query
         top: 10px;
         justify-content: center;
     }
-    .modal-dialog {
+    #locationsModal .modal-dialog {
         width:  100% !important;
         max-width:  none !important;
         height: 100%;
         margin: 0;
     }
-    .modal-content {
+    #locationsModal .modal-content {
         height: 100%;
         border: 0;
         border-radius: 0;
     }
-    .modal-body {
+    #locationsModal .modal-body {
         overflow-y: auto;
         position: relative;
         top: 25px;
@@ -461,7 +468,8 @@ VII.) Media Query
         height: 100%;
         padding: 3em;
     }
-    .header-content section{
+    .header-content p{
+        font-size:1rem;
 
     }
     .header-content section h1{
@@ -474,29 +482,37 @@ VII.) Media Query
         line-height: 1em;
     }
     .title-bar-text{
-        /* background-color:#fff; */
-        opacity: 1;
-        padding: 0em 0em;
-        position: relative;
-        /* bottom: 1%; */
-        /* left: 2%; */
-        width: fit-content;
-        /* transform: skewX(-30deg); */
-        /* border-bottom: solid 1px #ccc; */
-        /* border-radius: 5px 10% 0px 0px; */
-    }
+        position: absolute;
+        bottom: 97%;
+        left: 0;
+        /* background: #fff; */
+        min-height: 10%;
+        /* width: 25%; */
+        display: flex;
+        justify-content: space-evenly;min-width: 35%;
+        align-items: center;
+        overflow: hidden;
+
+        /* padding: 2rem .5rem; */}
     .title-bar{
-        background-color:#fff;
-        opacity: 1;
-        padding: 1em 2em;
-        position:absolute;
-        bottom: -2px;
-        left: -1%;
-        width: fit-content;
-        /* transform: skewX(-14deg); */
-        /* border-bottom: solid 1px #ccc; */
-        border-radius: 8px 8px 0px 10px;
-        min-width: 50%;}
+        position: relative;
+        left: 0;
+        height: 100%;
+        top: 0;
+        /* bottom: 0; */
+        /* overflow: hidden; */
+    }
+    .splitCard  .title-bar-text:before{
+        content: "";
+        position: absolute;
+        left: -3%;
+        bottom: 15%;background-color: #ffff;
+        width: 100%;
+        padding: 2rem 2rem;
+        clip-path: polygon(0 0, 100% 0%, 94% 100%, 0% 100%);
+        z-index: 1;
+        /* height: 104%; *//* box-sizing: content-box; */
+        /* min-width: 32%; */border-radius: 0px 8px 0px 10px; }
     .title-bar-text h2.skinnyTitle {
         font-family: 'Source Sans Pro',  sans-serif;
         text-transform: uppercase;
@@ -1460,7 +1476,7 @@ VII.) Media Query
     .globalTopBar {
         overflow-x: hidden;
         z-index: 4;
-    }
+        display: none;}
     .shrink #main-menu {
         position: fixed;
         left: 0;
@@ -1986,10 +2002,10 @@ VII.) Media Query
         position: relative;
     }
     .logo-navigation-container {
-        justify-content: center;
-        margin: 2% 0;
-        align-items: center;
-        vertical-align: middle;
+        /* justify-content: center; */
+        /* margin: 2% 0; */
+        /* align-items: center; */
+        /* vertical-align: middle; */
     }
     .shrink .logo-navigation-container {
         padding: 1px 0;
@@ -2236,7 +2252,7 @@ VII.) Media Query
     }
     #mobileNavigation {
         display: block;
-    }
+        padding: 0;}
     .dropdown-submenu {
         position: relative;
     }
@@ -2337,7 +2353,7 @@ and (-webkit-device-pixel-ratio: 3)  {
 }
 .menu-item-has-children .dropdown-menu {
     width: auto !important;
-}
+    float: unset !important;}
 /* Make dropdown visible on hover */
 @media (min-width: 767px) {
     #main-menu .dropdown > #main-menu .dropdown-menu {
@@ -2440,7 +2456,7 @@ and (-webkit-device-pixel-ratio: 3)  {
     width: fit-content;
     padding-right: 10%;
     opacity: .95;
-    /* border-radius: 4px 4px 4px 4px; */
+    min-width: 50%;border-radius: 4px 4px 4px 4px;
 }
 .page-option .breadcrumbs-container .card{
     border:none !Important;
@@ -2454,17 +2470,16 @@ and (-webkit-device-pixel-ratio: 3)  {
     background-color:transparent !important;
     box-shadow: none !important;
 }
-.page-template-flexible-page-template.page-child .breadcrumbs-container .card{
+.breadcrumbs-container .country-crumbs.card{
     border:none !Important;
     border-radius: 0;
-    clip-path: none;
-    position: relative;
+    clip-path: polygon(0 0, 80% 0, 76% 100%, 0% 100%);
+    position: absolute;
     left: 0;
     bottom: 1%;
     width: fit-content;
     padding-right: 10%;
-    background-color:transparent !important;
-    box-shadow: none !important;
+    opacity: .95;
 }
 .breadcrumbs-container .card{
     border:none !Important;
@@ -2555,9 +2570,9 @@ and (-webkit-device-pixel-ratio: 3)  {
 }
 #custom-tax-second-nav{
     position: relative;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
+    /* display: inline-flex; */
+    /* justify-content: center; */
+    /* align-items: center; */
     padding: 0;
     border: none;
     top: 0;
@@ -2587,7 +2602,7 @@ and (-webkit-device-pixel-ratio: 3)  {
     /* width: 100%; */
     position: relative;
     /* overflow-x: hidden; */
-    /* right: 0; */
+    right: 0;
 }
 .subsidiary-children-pages ul li a{color:#fff;font-weight: 600;z-index: 4;text-transform: uppercase;}
 /* Top & Bottom Borders Out */
@@ -2622,11 +2637,11 @@ and (-webkit-device-pixel-ratio: 3)  {
     justify-content: space-between;
 }
 .subsidiary-children-pages ul{
-    /* display: flex; */
-    /* border: none; */
-    /* padding: 0; */
-    /* align-items: center; */
-    /* width: 100%; */
+    display: flex;
+    border: none;
+    padding: 0;
+    justify-content: space-between;align-items: center;
+    width: 100%;
 }
 .breadcrumbs-container ul li.current-menu-item{
     display: block;
@@ -2925,8 +2940,8 @@ html body .content .content-wrapper .content-header-title {
 .page-header-title h1{
     color:#fff;
     font-weight:300;
-    text-transform:uppercase;
-    font-family: 'Source Sans Pro',  sans-serif;
+    text-transform:uppercase;sv
+font-family: 'Source Sans Pro',  sans-serif;
     margin: 0;
     font-size: 2.7rem;
 }
@@ -2942,12 +2957,12 @@ html body .content .content-wrapper .content-header-title {
     top: 0;
     width: 100%;
     background-color: #fff;
-}
+    position: sticky !important;}
 .subsidiary-children-pages ul li ul.children li a{color: #002d73;font-weight: 400;z-index: 4;text-transform: uppercase;}
 .home .transition-navbar{
     top: 0% !important;
     width: 100%;
-    /* position: relative; */
+    position: relative;
     margin-left: auto;
     margin-right: auto;
     display: block;
